Continued work on simulation